Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108773

Cannot compile qtexttospeech.h for C++ projects

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.4.3, 6.5.0
    • 6.4.0, 6.4.1
    • Speech
    • None
    • All
    • 9f83f1913 (dev), 6d5a904bb (6.4)

    Description

      Qt displayed errors with my C++ project as in the attached image.

      Workaround:

      Remove manually two below lines and I could compile fine:

      • line 17: #include <QtQmlIntegration/qqmlintegration.h>
      • line 25: QML_ELEMENT

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            nguyenpham Nguyen Pham
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes