Don't include QML headers in C++ API

The qtexttospeech.h including the qqmlintegration header is unnecessary,
and potentially wrong. While the C++-only hello_speech example builds
fine when using cmake even with the include, building the same example
using qmake fails.

fd028a8041e3bb860c088f005bc70d0b546a7c7b implemented declarative type
registration through foreign types, making the tagging of the public
QTextToSpeech C++ class as a QML_ELEMENT unnecessary.

Pick-to: 6.4
Fixes: QTBUG-108773
Change-Id: Ie7ba16a3b74dcc22365064fa1b67bec5b64af983
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>